Fix overflow on rewards bar

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -7,10 +7,6 @@ $link-color: #0d6efd;
 @import "./bootstrap";
 @import "flatpickr/dist/flatpickr.css";
 
-#root {
-    overflow: hidden;
-}
-
 .btn-primary {
     color: $white;
     &:hover {
